# hc-2022

./: .gitignore  .hashcode.json  LICENSE  README.md  hashcode-jonathan.yml  hashcode.yml  pyproject.toml
code/: main-jonathan.py  main.py  models.py  solver.py  solvers.py  tools.py
hc_practice_2022/: main.py  models.py  solvers.py
tests/: test_hc_practice_2022.py
