[tool.poetry]
name = "hc-2022"
version = "0.1.0"
description = ""
authors = ["Joel Dumoulin", "Jonathan Stoppani"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
rich = "^11.2.0"
ipython = "^8.0.1"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
